# agentic-automl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-pages.yml
docs/: action_agents.rst  conf.py  index.rst  output_notebook.rst  workflow.rst
examples/: customer_churn_demo.csv
memory/global/00_intake/: step_memory.md
memory/global/01_preprocessing/: step_memory.md
memory/global/02_data_splitting/: step_memory.md
memory/global/03_model_selection/: step_memory.md
memory/global/04_feature_selection/: step_memory.md
memory/global/05_metric_selection/: step_memory.md
memory/global/06_training_configuration/: step_memory.md
memory/global/07_hyperparameter_optimization/: step_memory.md
memory/global/08_validation_and_baseline/: step_memory.md
src/agentic_automl/: __init__.py  advisor.py  cli.py  data.py  final_validation_actions.py  hpo_actions.py  memory.py  metric_actions.py  model_actions.py  modeling.py  orchestrator.py  paths.py  preprocessing.py  preprocessing_actions.py  schemas.py  split_actions.py  step_knowledge.py  training_actions.py  ui_app.py  ui_logic.py  validation_actions.py  workflow.py
src/agentic_automl/assets/: __init__.py  automl_workflow.md
src/agentic_automl/assets/skills/00-intake/: KNOWLEDGE.md  LIMITS.md  SKILLS.md
src/agentic_automl/assets/skills/01-preprocessing/: KNOWLEDGE.md  LIMITS.md  SKILLS.md
src/agentic_automl/assets/skills/02-data-splitting/: KNOWLEDGE.md  LIMITS.md  SKILLS.md
tests/: test_hpo.py  test_recommendations.py  test_smoke.py  test_ui_app.py
workflow/: automl_workflow.md
(+18 files in other folders)
