[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-automl"
version = "0.1.0"
description = "AI-first AutoML workflow package for Codex, Claude Code, OpenClaw, and similar agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Andres + Codex" }
]
dependencies = [
  "joblib>=1.4",
  "numpy>=2.0",
  "pandas>=2.2",
  "plotly>=5.24",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "streamlit>=1.44",
]

[project.scripts]
agentic-automl = "agentic_automl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_automl = ["assets/*.md"]
